--- a/ApiProject/ApiProject.Api.csproj
+++ b/ApiProject/ApiProject.Api.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a78fc4f1-0739-49a8-930c-96dc1898986f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
